--- a/daily-task-8/css/dtask-8.css
+++ b/daily-task-8/css/dtask-8.css
@@ -32,12 +32,24 @@
 	width:100%;
 	height:400px;
 	padding-bottom:50px;
-	background-image:url(../image/hero-bg.jpg)
+	background-image:url(../image/hero-bg.jpg);
+	position:relative;
+	z-index:1;
+}
+.blur{
+	content:"";
+	width:100%;
+	height:400px;
+	position:absolute;
+	z-index:-1;
+	background-color: #fff;
+	opacity: 0.7;
+	padding-top: 50px;
 }
 .b1{
 	display:flex;
 	justify-content:space-evenly;
-	padding-top: 50px;
+	padding-top: 132px;
 }
 .btn{
 	margin-right: 200px;
