--- a/daily-task-7/css/dtask-7.css
+++ b/daily-task-7/css/dtask-7.css
@@ -1,13 +1,13 @@
 .container{
-	height:auto;
-	margin-top: 80px;
-    margin-left: 70px;
+	width:1175px;
+	
+	margin: auto ;
 }
 
 .row{
 	display:flex;
 	justify-content:space-evenly;
-	margin: 25px 100px 25px 25px;
+	/* margin: 25px 100px 25px 25px; */
 }
 
 .sec-1{
