--- a/full-page-task/css/index.css
+++ b/full-page-task/css/index.css
@@ -271,3 +271,55 @@ margin-top: 25px;
     background-color: rgb(111, 154, 204);
     margin: 45px 3px;
 }
+.services{
+    background-color: rgb(233, 243, 246);
+    padding-bottom: 60px;
+}
+.servicehead{
+    text-align: center;
+    padding-top: 50px;
+}
+.servicehead h1{
+    margin-bottom: 15px;
+    color: navy;
+}
+.serflex{
+    display: flex;
+    justify-content: space-between;
+}
+.serlist-1{
+    width: 32%;
+    padding: 45px 10px 45px 10px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 24px;
+    margin-top: 30px;
+    box-shadow: 0px 0px 10px -5px;
+
+}
+.serlist-1 i{
+    font-size: 35px;
+    padding: 20px;
+    background-color: rgb(232, 232, 232);
+    /* margin-bottom: 13px; */
+    border-radius: 50%;
+}
+.serlist-1 h3{
+    padding: 30px 0px 0px 0px;
+    color: darkblue;
+}
+.icofont-basketball ,.icofont-building{
+    color: rgb(105, 105, 184);
+}
+.icofont-notepad{
+    color: rgb(236, 192, 111);
+}
+.icofont-speed-meter{
+    color: rgb(200, 109, 109);
+}
+.icofont-layers{
+    color: rgb(236, 192, 111);
+}
+.icofont-cassette-player{
+    color: rgb(200, 109, 109);
+}
