--- a/full-page-task/css/index.css
+++ b/full-page-task/css/index.css
@@ -323,3 +323,23 @@ margin-top: 25px;
 .icofont-cassette-player{
     color: rgb(200, 109, 109);
 }
+.action{
+    background-color: rgb(135, 201, 223);
+}
+.actioncontent{
+    text-align: center;
+    padding: 40px 0px;
+    /* background-color: black; */
+    color: #fff;
+}
+.actioncontent h1{
+    padding-bottom: 10px;
+}
+.cbtn{
+    background-color: rgb(135, 201, 223);
+    border: solid 1px #fff;
+    border-radius: 5px;
+    padding: 5px 15px;
+    color: #fff;
+    margin-top: 10px;
+}
