--- a/full-page-task/css/index.css
+++ b/full-page-task/css/index.css
@@ -548,6 +548,7 @@ margin:50px 0px 20px 0px;
 }
 .locationflex{
     display: flex;
+    margin-bottom: 20px;
 }
 .c2{
     width: 60%;
@@ -567,6 +568,26 @@ margin:50px 0px 20px 0px;
 }
 .formrr2{
     padding-bottom: 10px;
+}
+.licon1{
+    background-color: rgb(200, 232, 242);
+    width: 50px;
+    text-align: center;
+    /* align-items: center; */
+    font-size: 30px;
+    padding-top: 7px;
+    color: dodgerblue;
+    margin-left: ;
+    border-radius: 5px;;
+}
+.location{
+    margin-left: 7px;
+}
+.location h2{
+    color: darkblue;
+}
+.location p{
+    color:  rgb(156, 196, 208);
 }
 .formrr2 input{
     width: 629px;
@@ -605,4 +626,19 @@ margin:50px 0px 20px 0px;
     color: #fff;
     padding: 7.5px 12px 7.5px 12px;
     border-radius: 0px 5px 5px 0px;
+}
+.fc1 h3{
+    font-size: 25px;
+    margin-bottom: 10px;
+    color: darkblue;
+}
+.info1{
+    margin-top: 10px;
+    line-height: 25px;
+}
+.info1 b , .fc2 h4{
+    color: darkblue;
+}
+.fc2{
+    line-height: 30px;
 }
