--- a/full-page-task/css/index.css
+++ b/full-page-task/css/index.css
@@ -610,7 +610,8 @@ margin:50px 0px 20px 0px;
 }
 .footer1{
     margin-top: 30px;
-    padding-top: 25px
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 .footer1flex{
     display: flex;
@@ -659,7 +660,7 @@ margin:50px 0px 20px 0px;
 }
 .footer2{
     background-color: #e9f5f9;
-    padding: 21px 0px;
+    padding: 20px 0px;
 }
 .footer2flex{
     display: flex;
